added the dsa summary in superadmin panela dn customer summary inegration in dsa panel
